--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Namaste Js Ep.4</title>
 </head>
 <body>
+    <h1>Namaste JavaScript</h1>
+    <button id="clickMe">Click me</button>
     <script src="index.js"></script>
 </body>
 </html>
