--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Namaste Js Ep.15-16</title>
+    <title>Namaste Js Ep.19</title>
 </head>
 <body>
     <h1>Namaste JavaScript</h1>
