--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Namaste Js Ep.19</title>
+    <title>Namaste Js Season 2 ep 1</title>
 </head>
 <body>
-    <h1>Namaste JavaScript</h1>
-    <button id="clickMe">Click me</button>
+    <h1>Namaste JavaScript season 2</h1>
     <script src="index.js"></script>
 </body>
 </html>
