--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Namaste Js Season 2 ep 6</title>
+    <title>Polyfill</title>
 </head>
 <body>
-    <h1>Namaste JavaScript season 2</h1>
+    <h1>Polyfill</h1>
     <script src="index.js"></script>
 </body>
 </html>
